Update TextToImageHandler.java